--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 		</td>				
 		<td>
 		<p><b>VoxelFlow: 2D Semantic Mask-Guided Voxel Flow for Open-Vocabulary 3D Instance Segmentation</b></p>
-		<p>Chaolei Wang,<b>Huan Chen</b>, Jin Ma, Ting Han, Yiping Chen</p>
+		<p>Chaolei Wang, <b>Huan Chen</b>, Jin Ma, Ting Han, Yiping Chen</p>
 		<em>International Conference on Cyberworlds (CW 2025)</em>
 		</td>
 	</tr>
@@ -255,8 +255,12 @@
 			</small>
 		</p>
 	</div>
-	<!-- 访问统计地图 - 如果不需要可以删除这行 -->
-	<!-- <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=777777&w=487&t=tt&d=xeJu_Kwek6AfO5eDCKFQ1iDWjzFQPLT_dNcYY3WLmrY&co=ffffff&cmo=3acc3a&cmn=ff5353&ct=5b1717'></script> -->
+	
+	<!-- 访问统计地图 -->
+	<div style="text-align: center; margin: 20px 0;">
+		<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=EebEiItEjTFYV7gp_Xju0l-GEY32U-pFLL6Dix5j1TA&cl=ffffff&w=a"></script>
+	</div>
+	
 	<p><center> &copy; 2025 Huan Chen. All rights reserved. </center></p>
 </div>
 </body></html>
