--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 		<img src="./publication/sigspatial2025.png" width="285px" style="box-shadow: 4px 4px 8px #888">
 		</td>				
 		<td>
-		<p><b>Towards A New Era of Geo-Foundation Models: Expert-Guided Multimodal Alignment and Geospatial Context Awareness</b></p>
+		<p><b>🎉 Towards A New Era of Geo-Foundation Models: Expert-Guided Multimodal Alignment and Geospatial Context Awareness</b></p>
 		<p>Han Ting, <b>Huan Chen</b>, Chaolei Wang, Yilan Ren, Meiliu Wu</p>
 		<em>ACM SIGSPATIAL 2025</em>
 		</td>
@@ -149,7 +149,7 @@
 		<img src="./publication/cw2025.png" width="285px" style="box-shadow: 4px 4px 8px #888">
 		</td>				
 		<td>
-		<p><b>VoxelFlow: 2D Semantic Mask-Guided Voxel Flow for Open-Vocabulary 3D Instance Segmentation</b></p>
+		<p><b>🎉 VoxelFlow: 2D Semantic Mask-Guided Voxel Flow for Open-Vocabulary 3D Instance Segmentation</b></p>
 		<p>Chaolei Wang, <b>Huan Chen</b>, Jin Ma, Ting Han, Yiping Chen</p>
 		<em>International Conference on Cyberworlds (CW 2025)</em>
 		</td>
@@ -169,7 +169,7 @@
 		<img src="./honors/secondprize.png" width="285px" style="box-shadow: 4px 4px 8px #888">
 		</td>				
 		<td>
-		<p><b>[12/2024] <b>Second Prize</b> of Outstanding Student Scholarship of Sun Yat-sen University for Academic Year 2023-2024 (2023-2024学年中山大学优秀学生奖学金<b>二等奖</b>)</b></p>
+		<p><b>[12/2024] 🏆 <b>Second Prize</b> of Outstanding Student Scholarship of Sun Yat-sen University for Academic Year 2023-2024 (2023-2024学年中山大学优秀学生奖学金<b>二等奖</b>)</b></p>
 		<p>Sun Yat-sen University (中山大学)</p>
 		</td>
 	</tr>
@@ -182,7 +182,7 @@
 		<img src="./honors/supermap.png" width="285px" style="box-shadow: 4px 4px 8px #888">
 		</td>				
 		<td>
-		<p><b>[12/2024] <b>First Prize</b> in Cartography Group of the 22nd SuperMap Cup National College GIS Competition (第22届SuperMap杯高校GIS大赛制图组<b>一等奖</b>)</b></p>
+		<p><b>[12/2024] 🏆 <b>First Prize</b> in Cartography Group of the 22nd SuperMap Cup National College GIS Competition (第22届SuperMap杯高校GIS大赛制图组<b>一等奖</b>)</b></p>
 		<p>Geographical Society of China / China Association of Geographic Information Industry (中国地理学会/中国地理信息产业协会)</p>
 		</td>
 	</tr>
@@ -195,7 +195,7 @@
 		<img src="./honors/GDSXJM.png" width="285px" style="box-shadow: 4px 4px 8px #888">
 		</td>				
 		<td>
-		<p><b>[12/2024] <b>First Prize</b> of 2024 Guangdong Provincial Mathematical Contest in Modeling for College Students and Guangdong Division of National Mathematical Contest in Modeling for College Students (2024年广东省大学生数学建模竞赛暨全国大学生数学建模竞赛广东省分赛<b>一等奖</b>)</b></p>
+		<p><b>[12/2024] 🏆 <b>First Prize</b> of 2024 Guangdong Provincial Mathematical Contest in Modeling for College Students and Guangdong Division of National Mathematical Contest in Modeling for College Students (2024年广东省大学生数学建模竞赛暨全国大学生数学建模竞赛广东省分赛<b>一等奖</b>)</b></p>
 		<p>Department of Education of Guangdong Province (广东省教育厅)</p>
 		</td>
 	</tr>
@@ -208,7 +208,7 @@
 		<img src="./honors/mathsecond.png" width="285px" style="box-shadow: 4px 4px 8px #888">
 		</td>				
 		<td>
-		<p><b>[12/2024] <b>Second Prize</b> of the 16th National Mathematical Contest for College Students (Non-Mathematics Category A) (第十六届全国大学生数学竞赛(非数学A类)<b>二等奖</b>)</b></p>
+		<p><b>[12/2024] 🏆 <b>Second Prize</b> of the 16th National Mathematical Contest for College Students (Non-Mathematics Category A) (第十六届全国大学生数学竞赛(非数学A类)<b>二等奖</b>)</b></p>
 		<p>Chinese Mathematical Society (中国数学会)</p>
 		</td>
 	</tr>
@@ -221,7 +221,7 @@
 		<img src="./honors/JGLD2024.png" width="285px" style="box-shadow: 4px 4px 8px #888">
 		</td>				
 		<td>
-		<p><b>[10/2024] <b>Special Prize</b> of the 8th National LiDAR Conference "HuaCe Cup" 3D Digital Base Basic Geographic Data Processing Competition (第八届全国激光雷达大会"华测杯"三维数字底座基础地理数据处理竞赛<b>特等奖</b>)</b></p>
+		<p><b>[10/2024] 🏆 <b>Special Prize</b> of the 8th National LiDAR Conference "HuaCe Cup" 3D Digital Base Basic Geographic Data Processing Competition (第八届全国激光雷达大会"华测杯"三维数字底座基础地理数据处理竞赛<b>特等奖</b>)</b></p>
 		<p>China National Committee of the International Society for Digital Earth (国际数字地球学会中国国家委员会)</p>
 		</td>
 	</tr>
@@ -234,7 +234,7 @@
 		<img src="./honors/GXB.png" width="285px" style="box-shadow: 4px 4px 8px #888">
 		</td>				
 		<td>
-		<p><b>[04/2024] <b>Excellence Award</b> of the 11th "Sharing Cup" Innovation Competition of Science and Technology Resources Sharing Service and the 1st Earth System Science Professional Competition (第十一届"共享杯"科技资源共享服务创新大赛暨第一届地球系统科学专业赛优秀奖)</b></p>
+		<p><b>[04/2024] 🏆 <b>Excellence Award</b> of the 11th "Sharing Cup" Innovation Competition of Science and Technology Resources Sharing Service and the 1st Earth System Science Professional Competition (第十一届"共享杯"科技资源共享服务创新大赛暨第一届地球系统科学专业赛优秀奖)</b></p>
 		<p>National Earth System Science Data Center (国家地球系统科学数据中心)</p>
 		</td>
 	</tr>
