--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					Zhuhai, China.<br>
 					<br>
 					Email: luoling0112 [at] gmail.com / 531152893 [at] qq.com<br>
-					Major: 遥感科学与技术 (Remote Sensing Science and Technology)<br>
+					Major: Remote Sensing Science and Technology (遥感科学与技术)<br>
 				</p>
 				<p> 
 					<!-- <a href="你的LinkedIn链接"><img src="./pic/LinkedIn.png" height="30px" style="margin-bottom:-3px"></a> -->
