--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 		[08/2025] 🎉 One paper is accepted by <a href="https://sigspatial2025.sigspatial.org/">ACM SIGSPATIAL 2025</a> !  
 	</li>
 	<li>
-		[08/2025] 🎉 One paper is accepted by <a href="https://cw2025.tyut.edu.cn/">International Conference on Cyberworlds (CW 2025)</a> !  
+		[08/2025] 🎉 One paper is accepted by <a href="https://cw2025.tyut.edu.cn/">International Conference on Cyberworlds 2025 (CW 2025)</a> !  
 	</li>
 	<li>
 		[12/2024] 🏆 Won <b>First Prize</b> in Cartography Group of the 22nd SuperMap Cup National College GIS Competition !
@@ -151,7 +151,7 @@
 		<td>
 		<p><b>🎉 VoxelFlow: 2D Semantic Mask-Guided Voxel Flow for Open-Vocabulary 3D Instance Segmentation</b></p>
 		<p>Chaolei Wang, <b>Huan Chen</b>, Jin Ma, Ting Han, Yiping Chen</p>
-		<em>International Conference on Cyberworlds (CW 2025)</em>
+		<em>International Conference on Cyberworlds 2025 (CW 2025)</em>
 		</td>
 	</tr>
 	
