--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 		</td>				
 		<td>
 		<p><b>🎉 Towards A New Era of Geo-Foundation Models: Expert-Guided Multimodal Alignment and Geospatial Context Awareness</b></p>
-		<p>Han Ting, <b>Huan Chen</b>, Chaolei Wang, Yilan Ren, Meiliu Wu</p>
+		<p>Ting Han, <b>Huan Chen</b>, Chaolei Wang, Yilan Ren, Meiliu Wu</p>
 		<em>ACM SIGSPATIAL 2025</em>
 		</td>
 	</tr>
