--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<tr>
 			<td width="670">
 				<div id="toptitle">					
-					<h1>Huan Chen (陈桓)</h1>
+					<h1>Huan Chen</h1>
 					<h1></h1>
 					<img src="publication/sign.jpg" alt="个人签名"  class="smaller-image">
 					</div>
