--- a/index.html
+++ b/index.html
@@ -160,6 +160,9 @@
 <div style="height: 200px; overflow: auto;">
 <ul>
 	<li>
+		[09/2025] 🏆 Won <b>Special Prize</b> of the 9th National Lidar Conference Point Cloud Intelligent Analysis Competition !
+	</li>
+	<li>
 		[09/2025] 🥇 I have been awarded a <b>National Scholarship</b> for the 2024-2025 academic year !
 	</li>
 	<li>
@@ -295,6 +298,20 @@
 <h2>Honors &amp; Awards</h2>
 <table id="tbHonors" width="100%">
 	<tbody>
+	<tr class="honor-row">
+		<td width="306">
+		<img src="./honors/JGLD2025.jpg" width="285px" style="box-shadow: 4px 4px 8px #888" class="publication-img">
+		</td>				
+		<td>
+		<p><b>[10/2025] 🏆 <b>Special Prize</b> of the 9th National Lidar Conference Point Cloud Intelligent Analysis Competition (第九届全国激光雷达大会点云智能解析大赛<b>特等奖</b>)</b></p>
+		<p>China National Committee of the International Society for Digital Earth (国际数字地球学会中国国家委员会)</p>
+		</td>
+	</tr>
+
+	<tr class="separator-row">
+        <td colspan="2"></td>
+    </tr>
+
 	<tr class="honor-row">
 		<td width="306">
 		<img src="./pic/tobeupdated.png" width="285px" style="box-shadow: 4px 4px 8px #888" class="publication-img">
