--- a/index.html
+++ b/index.html
@@ -160,38 +160,38 @@
 <div style="height: 200px; overflow: auto;">
 <ul>
 	<li>
-		[09/2025] 🏆 Won <b>Special Prize</b> of the 9th National Lidar Conference Point Cloud Intelligent Analysis Competition !
+		[09/2025] 🏆 Wins the <b>Special Prize</b> of the 9th National Lidar Conference Point Cloud Intelligent Analysis Competition!
 	</li>
 	<li>
-		[09/2025] 🥇 I have been awarded a <b>National Scholarship</b> for the 2024-2025 academic year !
+		[09/2025] 🥇 Is awarded a <b>National Scholarship</b> for the 2024–2025 academic year!
 	</li>
 	<li>
-		[09/2025] 🎉 One paper is accepted by <a href="https://events.ornl.gov/acmsigspatial-geoai2025/">The 8th ACM SIGSPATIAL International Workshop on AI for Geographic Knowledge Discovery (GeoAI25)</a> !  
+		[09/2025] 🎉 One paper is accepted by <a href="https://events.ornl.gov/acmsigspatial-geoai2025/">The 8th ACM SIGSPATIAL International Workshop on AI for Geographic Knowledge Discovery (GeoAI25)</a>!  
 	</li>
 	<li>
-		[09/2025] 🎉 One paper is accepted by <a href="https://geoindustry.github.io/geoindustryworkshop2025/">The 4th ACM SIGSPATIAL International Workshop on Spatial Big Data and AI for Industrial Applications (GeoIndustry25)</a> !  
+		[09/2025] 🎉 One paper is accepted by <a href="https://geoindustry.github.io/geoindustryworkshop2025/">The 4th ACM SIGSPATIAL International Workshop on Spatial Big Data and AI for Industrial Applications (GeoIndustry25)</a>!  
 	</li>
 	<li>
-		[09/2025] 🎉 One paper is accepted by <a href="https://wacv.thecvf.com/">Winter Conference on Applications of Computer Vision 2026 (WACV 2026)</a> !  
+		[09/2025] 🎉 One paper is accepted by <a href="https://wacv.thecvf.com/">Winter Conference on Applications of Computer Vision 2026 (WACV 2026)</a>!  
 	</li>
 	<li>
-		[08/2025] 🎉 One paper is accepted by <a href="https://sigspatial2025.sigspatial.org/">ACM SIGSPATIAL 2025</a> !  
+		[08/2025] 🎉 One paper is accepted by <a href="https://sigspatial2025.sigspatial.org/">ACM SIGSPATIAL 2025</a>!  
 	</li>
 	<li>
-		[08/2025] 🎉 One paper is accepted by <a href="https://cw2025.tyut.edu.cn/">International Conference on Cyberworlds 2025 (CW 2025)</a> ! We are nominated for the <b>Best Paper Honorable Mention Award</b> at the conference ! 
+		[08/2025] 🎉 One paper is accepted by <a href="https://cw2025.tyut.edu.cn/">International Conference on Cyberworlds 2025 (CW 2025)</a>! It is nominated for the <b>Best Paper Honorable Mention Award</b> at the conference! 
 	</li>
 	<li>
-		[12/2024] 🏆 Won <b>First Prize</b> in Cartography Group of the 22nd SuperMap Cup National College GIS Competition !
+		[12/2024] 🏆 Wins the <b>First Prize</b> in the Cartography Group of the 22nd SuperMap Cup National College GIS Competition!
 	</li>
 	<li>
-		[12/2024] 🏆 Won <b>First Prize</b> of 2024 Guangdong Provincial Mathematical Contest in Modeling for College Students !
+		[12/2024] 🏆 Wins the <b>First Prize</b> of the 2024 Guangdong Provincial Mathematical Contest in Modeling for College Students!
 	</li>
 	<li>
-		[10/2024] 🏆 Won <b>Special Prize</b> of the 8th National LiDAR Conference "HuaCe Cup" 3D Digital Base Basic Geographic Data Processing Competition !
+		[10/2024] 🏆 Wins the <b>Special Prize</b> of the 8th National LiDAR Conference "HuaCe Cup" 3D Digital Base Basic Geographic Data Processing Competition!
 	</li>
-
 </ul>
 </div>
+
 
 <h2>Education</h2>
 <table id="tbPublications" width="100%">
