--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 <!-- 符号说明 -->
 <div class="author-notes">
     <strong>Symbol Explanation:</strong><br>
-    <sup>†</sup> Co-First Author &nbsp;&nbsp;&nbsp; <sup>*</sup> Corresponding Author
+    <b><sup>†</sup> Co-First Author &nbsp;&nbsp;&nbsp; <sup>*</sup> Corresponding Author</b>
 </div>
 
 <h2>Honors &amp; Awards</h2>
