--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             <img src="./publication/GeoIndustry2025.png" width="285px" style="box-shadow: 4px 4px 8px #888" class="publication-img">
         </td>                
         <td>
-            <p><b>A Large-Scale and Fine-Grained Building Function Classification Dataset in the Greater Bay Area</b></p>
+            <p><b>GBA-UBF : A Large-Scale and Fine-Grained Building Function Classification Dataset in the Greater Bay Area</b></p>
             <p>Chunsong Chen<sup>†</sup>, Yichen Hou<sup>†</sup>, <span class="myname">Huan Chen</span><sup>†</sup>, Junlin Li, Rong Fu, Qiushen Lai, Yiping Chen<sup>*</sup>, Ting Han<sup>*</sup></p>
             <em>The 4th ACM SIGSPATIAL International Workshop on Spatial Big Data and AI for Industrial Applications (GeoIndustry25)</em>
         </td>
