--- a/pub.html
+++ b/pub.html
@@ -145,6 +145,33 @@
     </div>
   </div>
 
+
+
+  <h2>arXiv Preprints</h2>
+
+  <div class="pub-card">
+    <div class="thumb">
+      <img src="./publication/SatSAM2.png" alt="">
+    </div>
+    <div class="text">
+      <h3>SatSAM2: Motion-Constrained Video Object Tracking in Satellite Imagery using Promptable SAM2 and Kalman Priors
+        <a href="https://arxiv.org/abs/2511.18264" target="_blank" class="arxiv-link">
+          <img src="./pic/arxiv-logo.png" alt="arXiv" class="arxiv-icon">
+        </a>
+      </h3>
+
+      <p class="authors">
+        Ruijie Fan,
+        Junyan Ye,
+        <b>Huan Chen</b>,
+        Zilong Huang,
+        Xiaolei Wang,
+        Weijia Li<sup>*</sup>
+      </p>
+
+      <p><em>arXiv:2511.18264, 2025</em></p>
+    </div>
+  </div>
 </div>
 
 <footer>© 2025 Huan Chen</footer>
