--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="text">
       <h1 class="name">Huan Chen</h1>
       <p>🎓 Undergraduate Student</p>
-      <p>School of Geospatial Engineering and Science<br>Sun Yat-sen University · Zhuhai, China</p>
+      <p><b><a href="https://sges.sysu.edu.cn/">School of Geospatial Engineering and Science</a></b><br><b><a href="https://www.sysu.edu.cn/">Sun Yat-sen University</a></b> · Zhuhai, China</p>
       <address>Hanlin No. 3, Block E, Room 422, Sun Yat-sen University, Zhuhai, Guangdong, China</address>
       <p class="contact">
         Email: <a href="mailto:chenh726@mail2.sysu.edu.cn">chenh726@mail2.sysu.edu.cn</a><br>
