--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
       <address>Hanlin No. 3, Block E, Room 422, Sun Yat-sen University, Zhuhai, Guangdong, China</address>
       <p class="contact">
         Email: <a href="mailto:chenh726@mail2.sysu.edu.cn">chenh726@mail2.sysu.edu.cn</a><br>
-        GitHub: <a href="https://github.com/luoling0112">github.com/luoling0112</a>
+        GitHub: <a href="https://github.com/luoling0112">github.com/luoling0112</a><br><br>
+        <a href="https://scholar.google.com/citations?hl=zh-CN&view_op=list_works&gmla=AKzYXQ3_73YVpOr-hp4An2HWJkXUXzWOBv70KCxsRa4Y9l1o_iUFOBrF8_NvDk5X7vk18OwiftnMR7IZXu2_XlVjdf8&user=aCjzeKoAAAAJ" target="_blank" class="scholar-link-inline">
+          <img src="./pic/google_scholar.png" alt="Google Scholar" class="scholar-icon">
+        </a>
       </p>
     </div>
     <img src="./pic/chphoto.jpg" alt="Huan Chen">
