--- a/pub.html
+++ b/pub.html
@@ -74,10 +74,13 @@
     <div class="text">
       <h3>
         Semantic4Safety: Causal Insights from Zero-shot Street View Imagery Segmentation for Urban Road Safety
+      </h3>
+
+      <p class="arxiv-line">
         <a href="https://www.arxiv.org/abs/2510.15434" target="_blank" class="arxiv-link">
           <img src="./pic/arxiv-logo.png" alt="arXiv" class="arxiv-icon">
         </a>
-      </h3>
+      </p>
 
       <p class="authors">
         <b>Huan Chen</b><sup>†</sup>,
@@ -107,10 +110,13 @@
     <div class="text">
       <h3>
         GBA-UBF: A Large-Scale and Fine-Grained Building Function Classification Dataset in the Greater Bay Area
+      </h3>
+
+      <p class="arxiv-line">
         <a href="https://arxiv.org/abs/2510.08921" target="_blank" class="arxiv-link">
           <img src="./pic/arxiv-logo.png" alt="arXiv" class="arxiv-icon">
         </a>
-      </h3>
+      </p>
 
       <p class="authors">
         Chunsong Chen<sup>†</sup>,
@@ -247,10 +253,13 @@
     <div class="text">
       <h3>
         SatSAM2: Motion-Constrained Video Object Tracking in Satellite Imagery using Promptable SAM2 and Kalman Priors
+      </h3>
+
+      <p class="arxiv-line">
         <a href="https://arxiv.org/abs/2511.18264" target="_blank" class="arxiv-link">
           <img src="./pic/arxiv-logo.png" alt="arXiv" class="arxiv-icon">
         </a>
-      </h3>
+      </p>
 
       <p class="authors">
         Ruijie Fan,
