--- a/pub.html
+++ b/pub.html
@@ -6,6 +6,71 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
 <script src="script.js" defer></script>
+<style>
+/* 年份分界线样式 */
+.year-divider {
+  font-size: 1.5em;
+  font-weight: 600;
+  color: #2c3e50;
+  border-bottom: 2px solid #e0e0e0;
+  padding-bottom: 0.5em;
+  margin: 2.5em 0 1.5em 0;
+}
+
+body.dark-mode .year-divider {
+  color: #ecf0f1;
+  border-bottom-color: #444;
+}
+
+/* 论文类型标题样式 */
+.section-header {
+  position: relative;
+  padding: 1em 1.5em;
+  margin: 2.5em 0 1.5em 0;
+  border-radius: 8px;
+  font-size: 1.6em;
+  font-weight: 600;
+  border-left: 4px solid;
+}
+
+.section-header.journal {
+  background: linear-gradient(to right, rgba(255, 182, 193, 0.15), rgba(255, 255, 255, 0));
+  border-left-color: #ffb6c1;
+  color: #d63384;
+}
+
+.section-header.conference {
+  background: linear-gradient(to right, rgba(135, 206, 250, 0.15), rgba(255, 255, 255, 0));
+  border-left-color: #87ceeb;
+  color: #0d6efd;
+}
+
+.section-header.arxiv {
+  background: linear-gradient(to right, rgba(144, 238, 144, 0.15), rgba(255, 255, 255, 0));
+  border-left-color: #90ee90;
+  color: #198754;
+}
+
+body.dark-mode .section-header.journal {
+  background: linear-gradient(to right, rgba(255, 182, 193, 0.1), rgba(0, 0, 0, 0));
+  color: #ff9ab5;
+}
+
+body.dark-mode .section-header.conference {
+  background: linear-gradient(to right, rgba(135, 206, 250, 0.1), rgba(0, 0, 0, 0));
+  color: #6db3f2;
+}
+
+body.dark-mode .section-header.arxiv {
+  background: linear-gradient(to right, rgba(144, 238, 144, 0.1), rgba(0, 0, 0, 0));
+  color: #75d975;
+}
+
+/* 移除原有的 h2 样式影响 */
+.container > h2 {
+  display: none;
+}
+</style>
 </head>
 
 <body>
@@ -27,7 +92,9 @@
   <h1>Publications</h1>
 
   <!-- ================= Journal ================= -->
-  <h2>Journal Papers</h2>
+  <div class="section-header journal">Journal Papers</div>
+
+  <h3 class="year-divider">2026</h3>
 
   <div class="pub-card">
     <div class="thumb">
@@ -45,7 +112,7 @@
         Xinchang Zhang,
         Yiping Chen<sup>*</sup>
       </p>
-      <p><em>Urban Informatics, 2025</em></p>
+      <p><em>Urban Informatics, 2026</em></p>
 
       <button class="abs-btn" onclick="toggleAbstract(this)">Abstract</button>
       <div class="Abstract" style="display:none;">
@@ -65,7 +132,10 @@
   </div>
 
   <!-- ================= Conferences ================= -->
-  <h2>Conference Papers</h2>
+  <div class="section-header conference">Conference Papers</div>
+
+
+  <h3 class="year-divider">2025</h3>
 
   <div class="pub-card">
     <div class="thumb">
@@ -244,7 +314,9 @@
   </div>
 
   <!-- ================= arXiv ================= -->
-  <h2>arXiv Preprints</h2>
+  <div class="section-header arxiv">arXiv Preprints</div>
+
+  <h3 class="year-divider">2025</h3>
 
   <div class="pub-card">
     <div class="thumb">
@@ -288,6 +360,6 @@
 </div>
 
 
-<footer>© 2025 Huan Chen</footer>
+<footer>© 2026 Huan Chen</footer>
 </body>
 </html>
